Добавлены программы для микро тестирования производительности.